--- a/vercel.json
+++ b/vercel.json
@@ -3,5 +3,8 @@
   "routes": [
     { "handle": "filesystem" },
     { "src": "/api/(.*)", "dest": "/api/$1" }
-  ]
-} 
+  ],
+  "env": {
+    "GEMINI_API_KEY": "@gemini_api_key"
+  }
+}
