--- a/vercel.json
+++ b/vercel.json
@@ -2,9 +2,7 @@
   "version": 2,
   "routes": [
     { "handle": "filesystem" },
+    { "src": "/api/search", "dest": "/api/word" },
     { "src": "/api/(.*)", "dest": "/api/$1" }
-  ],
-  "env": {
-    "GEMINI_API_KEY": "@gemini_api_key"
-  }
+  ]
 }
